Informe Final lab3

--- a/Copia_de_Lab3.ipynb
+++ b/Copia_de_Lab3.ipynb
@@ -38,7 +38,7 @@
         },
         "outputId": "fd15d0af-fed5-4f12-940e-667cd36143f6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,7 +61,7 @@
         "id": "GlA8ysqvRjtd",
         "outputId": "92418330-2033-49ad-b65d-7c84963efcc8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         "id": "t50bgSLQN8Ex",
         "outputId": "19fc27c9-8255-47d2-c030-2e941d47dc6a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +371,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +511,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,7 +644,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -726,7 +726,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,7 +767,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,7 +848,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,7 +912,7 @@
           "height": 564
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -958,7 +958,7 @@
           "height": 496
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1034,7 +1034,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1090,7 +1090,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1753,7 +1753,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2449,7 +2449,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2519,7 +2519,7 @@
           "height": 695
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2558,14 +2558,69 @@
         "\n",
         "### ¿Cada registro contiene el mismo número de campos?\n",
         "\n",
-        "Sí, cada registro contiene el mismo número de campos estructurales. Sin embargo, hay valores nulos presentes en los datos que deben ser gestionados durante el análisis.\n",
+        "Sí, cada registro contiene el mismo número de campos estructurales. Sin embargo, hay valores nulos presentes en los datos que deben ser gestionados durante el análisis.\n"
+      ],
+      "metadata": {
+        "id": "qvOV3Iz2ICln"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Informe de Exploración y Análisis de Datos\n",
         "\n",
+        "#### Resumen\n",
+        "\n",
+        "Durante la exploración y análisis de los datos del conjunto de datos de viviendas, se llevaron a cabo diversas tareas para comprender mejor la naturaleza y calidad de los datos disponibles. A continuación, se presentan los hallazgos y conclusiones clave derivados de este proceso:\n",
+        "\n",
+        "#### 1. Descripción General de los Datos\n",
+        "\n",
+        "- **Formato y Fuente de Datos:**\n",
+        "  Los datos se obtuvieron de un archivo CSV que contiene información detallada sobre propiedades inmobiliarias, incluyendo atributos como precio, área construida, estrato, entre otros.\n",
+        "\n",
+        "- **Tamaño del Conjunto de Datos:**\n",
+        "  El conjunto de datos consta de [num_filas_cleaned] registros y [num_columnas_cleaned] columnas, esto se indica en la parte superior del archivo.\n",
+        "\n",
+        "- **Tipos de Datos Presentes:**\n",
+        "  Incluyen variables numéricas como precio y área construida, así como variables categóricas como estrato y estado de la propiedad.\n",
+        "\n",
+        "#### 2. Calidad de los Datos\n",
+        "\n",
+        "- **Datos Faltantes:**\n",
+        "  Se identificaron valores nulos en varias columnas, especialmente en las características relacionadas con características específicas de las propiedades.\n",
+        "\n",
+        "- **Errores Tipográficos y Codificación:**\n",
+        "  No se identificaron errores tipográficos obvios, pero se observaron inconsistencias en la codificación de ciertas variables categóricas.\n",
+        "\n",
+        "#### 3. Análisis Estadístico y Exploratorio\n",
+        "\n",
+        "- **Estadísticas Clave:**\n",
+        "  Se calcularon estadísticas descriptivas como media, desviación estándar, mínimo y máximo para variables como precio y área construida. Por ejemplo, el precio promedio de las propiedade cuenta con una desviación estándar alta que sugiere una amplia variabilidad en los precios.\n",
+        "\n",
+        "- **Distribución de Variables:**\n",
+        "  Se utilizó visualización (histogramas, boxplots) para explorar la distribución de variables como área construida y precio por estrato, destacando diferencias significativas entre estratos medios.\n",
+        "\n",
+        "#### 4. Análisis de Valores Atípicos y Plausibilidad\n",
+        "\n",
+        "- **Identificación de Valores Atípicos:**\n",
+        "  Se identificaron valores atípicos en las variables de precio y área construida mediante el método del rango intercuartílico (IQR), indicando posibles discrepancias o errores en los datos.\n",
+        "\n",
+        "- **Comprobación de Plausibilidad:**\n",
+        "  Se observaron inconsistencias en ciertos registros, como propiedades con características anómalas (por ejemplo, precios extremadamente bajos o altos para ciertas áreas construidas).\n",
+        "\n",
+        "#### 5. Conclusiones y Recomendaciones\n",
+        "\n",
+        "- **Conclusiones:**\n",
+        "  Basado en el análisis realizado, se recomienda una revisión más detallada de ciertas variables clave como precio y área construida, junto con una limpieza adicional de datos para mejorar la coherencia y fiabilidad del conjunto de datos.\n",
+        "\n",
+        "- **Recomendaciones:**\n",
+        "  Se sugiere realizar un análisis más profundo sobre la relación entre el precio y las características específicas de las propiedades, así como implementar medidas para mejorar la integridad de los datos (gestión de valores faltantes, estandarización de codificación, etc.).\n",
         "\n",
         "- Johan Sebastian Quintero Vargas - 107699\n",
         "- Breiner Spencer Barrios Asprilla - 121230"
       ],
       "metadata": {
-        "id": "qvOV3Iz2ICln"
+        "id": "g6MI-r5bJvDE"
       }
     }
   ]
